<resources>
    <string name="app_name">Trading Post</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_initialize_user">Welcome to Trading Post!</string>
    <string name="title_activity_trade_offer_compose">Compose a Trade</string>
    <string name="title_activity_trade_offer_review">Review Trade</string>
    <string name="title_activity_trade_offer_history">Trade History</string>
...

    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">myUsername</string>

    <!--Navbar titles for drawer fragments-->
    <string name="inventoryTitle">Inventory</string>
    <string name="browseTitle">Browse</string>
    <string name="tradeTitle">Trades</string>
    <string name="friendsTitle">Friends</string>
    <string name="editProfileTitle">My Profile</string>
    <string name="topTradersTitle">Top Traders</string>

    <!--Configuration strings-->
...
    <string name="title_activity_inspect_item_view">Inspect Item</string>

    <string name="hello_world">Hello world!</string>
    <string name="editProfile">Edit Profile</string>

    <string-array name="categories_array">
        <item>Cameras</item>
        <item>Flash Photography</item>
        <item>Instant Photography</item>
        <item>Lens mounts</item>
        <item>Photographic Chemicals</item>
        <item>Photographic Shutters</item>
        <item>Optical Filters</item>
        <item>Photobooth Props</item>
        <item>Stands</item>
        <item>Photographic Films</item>
    </string-array>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="myProfileLabel">My Profile</string>
    <string name="title_activity_view_profile">View Profile</string>
    <string name="noUserNameToast">Please provide a username</string>
...
