...
    android:id="@+id/browse_menu">
    <item
        android:id="@+id/search_inventory_button"
        android:icon="@drawable/ic_magnify"
        app:showAsAction="always"
        android:orderInCategory="10"
        android:title="Search">
    </item>
    <item
        android:id="@+id/filter_inventory_button"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always"
        android:orderInCategory="11"
        android:title="Filter">
    </item>
</menu>
