<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!--<EditText xmlns:app="http://schemas.android.com/apk/res-auto"-->
              <!--android:layout_width="match_parent"-->
              <!--android:layout_height="wrap_content"-->
              <!--android:id="@+id/addFilterEditType"-->
              <!--android:layout_gravity="center_horizontal"-->
              <!--android:maxLines="1"-->
              <!--android:inputType="text"-->
              <!--android:digits="@string/allowable_username_characters"/>-->
    <Spinner
        android:id="@+id/itemFilterCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:entries="@array/categories_array_with_none"/>
</LinearLayout>